--- a/package.json
+++ b/package.json
@@ -19,5 +19,10 @@
     "tailwindcss": "^4.1.11",
     "vue": "^3.5.17",
     "vue-router": "^4.5.1"
+  },
+  "devDependencies": {
+    "@iconify-json/iconoir": "^1.2.7",
+    "@iconify-json/material-symbols": "^1.2.29",
+    "@iconify-json/ri": "^1.2.5"
   }
 }
