--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
+    "@iconify-json/fluent-emoji-high-contrast": "^1.2.3",
     "@iconify-json/iconoir": "^1.2.7",
     "@iconify-json/material-symbols": "^1.2.29",
     "@iconify-json/ri": "^1.2.5"
