--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@nuxt/fonts": "^0.11.4",
     "@nuxt/icon": "^1.15.0",
     "@nuxt/image": "^1.10.0",
+    "@nuxthub/core": "^0.9.0",
     "@tailwindcss/vite": "^4.1.11",
     "daisyui": "^5.0.46",
     "nuxt": "^4.0.0",
